Added JVM arguments for Apache Arrow (required by InfluxDB 3 client)